examples/invalid/unsed_secret.reqlang
#!/usr/bin/env reqlang
---
GET / HTTP/1.1
---
HTTP/1.1 200 OK

---
vars = []
secrets = ["base_url"]

[envs]

[prompts]
---
